# Hatch

./: .appveyor_helper.bat  .appveyor_helper.sh  .travis.yml  .travis_ci_helper.sh  README.md  STYLE.md  WORKFLOW.md  appveyor.yml
hatch/: .gitignore  Cargo.toml
hatch/src/: asset.rs  assets.rs  cli.rs  command.rs  configuration.rs  constants.rs  egg.rs  lib.rs  main.rs  manifest.rs  project.rs  repo.rs  task.rs  yaml.rs
hatch/src/assets/: builder.rs  catch_definition.rs  catch_header.rs  config.rs  generator.rs  janitor.rs  mod.rs  platform.rs  test.rs  test_tupfile.rs  tupfile.rs  tupfile_ini.rs  tuprules.rs
hatch/src/assets/tests/: builder.rs  catch_definition.rs  catch_header.rs  config.rs  fixtures.rs  generator.rs  mod.rs  platform.rs  test_tupfile.rs  tupfile.rs  (+1 more)
hatch/src/cli/: mod.rs
hatch/src/config/: cli_config.rs  env_config.rs  file_config.rs  mod.rs  yaml_config.rs
hatch/src/dtl/: asset.rs  cli.rs  egg.rs  mod.rs  project.rs
hatch/src/error/: mod.rs
hatch/src/errors/: mod.rs
hatch/src/generators/: mod.rs  platform_kind.rs  project_asset.rs  tup.rs
hatch/src/hatch_error/: empty_config.rs  missing_build.rs  missing_name.rs  missing_version.rs  mod.rs  null.rs
hatch/src/locations/: mod.rs
hatch/src/platform/: arch.rs  mod.rs  os.rs
hatch/src/project/: build.rs  compiler_options.rs  mod.rs  project_kind.rs  target.rs
hatch/src/task/: mod.rs  tests.rs
hatch/src/tree/: mod.rs
hatch/src/tup/: library.rs  manifest.rs  mod.rs  platform.rs  project.rs  version.rs
hatch/src/visitor/: config_visitor.rs  hatchfile_config_visitor.rs  mod.rs
(+61 files in other folders)
