[package]
name = "hatch"
version = "0.2.0"
authors = ["technetos <mrgould93@gmail.com>", "dannypeck <danieljpeck93@gmail.com>", "xmclark <mackenzie.a.z.c@gmail.com>"]

[dependencies]
clap = {version = "2", features = ["yaml"]}
yaml-rust = "0.3"
git2 = "0.6"
failure = "0.1.1"
os_info = "0.7.0"
reqwest = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
assert_fs = "0.2"
predicates = "0.5"
